[gd_scene load_steps=31 format=2]

[ext_resource path="res://Art/PixelFantasy_Caves_1.0 (2)/mainlev_build.png" type="Texture" id=1]
[ext_resource path="res://Art/potato.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://tiles.tres" type="TileSet" id=4]
[ext_resource path="res://mobilecontrols.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/Portal.png" type="Texture" id=7]
[ext_resource path="res://Sounds/06 Tonal Dissonance.ogg" type="AudioStream" id=8]
[ext_resource path="res://World.gd" type="Script" id=9]
[ext_resource path="res://Heart.tscn" type="PackedScene" id=10]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 31.9648, 29.9127, 0.428528, 30.1918 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConcavePolygonShape2D" id=13]
segments = PoolVector2Array( 0, 0, 170, 0, 170, 0, 170, 16, 170, 16, 0, 16, 0, 16, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
0/name = "mainlev_build.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 336, 368, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "mainlev_build.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 367, 0, 0 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "mainlev_build.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 384, 368, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 7 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "mainlev_build.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 432, 368, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mainlev_build.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 224, 368, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 9 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "mainlev_build.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 416, 496, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "mainlev_build.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 528, 447, 0, 0 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "mainlev_build.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 528, 448, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "mainlev_build.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 416, 448, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "mainlev_build.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 240, 496, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "mainlev_build.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 272, 32, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "mainlev_build.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 320, 16, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "mainlev_build.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 32, 32, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "mainlev_build.png 13"
13/texture = ExtResource( 1 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 224, 96, 32, 36 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 10 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "mainlev_build.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 304, 96, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 11 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "mainlev_build.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 416, 96, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 12 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
16/name = "mainlev_build.png 16"
16/texture = ExtResource( 1 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 352, 96, 16, 41 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "mainlev_build.png 17"
17/texture = ExtResource( 1 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 272, 96, 15, 32 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "mainlev_build.png 18"
18/texture = ExtResource( 1 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 755, 16, 170, 16 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 13 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7, 13 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.00592076, 1e-05 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Gun:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 440872, 185364, 901250 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 320.5, 59.5 )

[node name="World" type="Node2D"]
script = ExtResource( 9 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 8
collision_mask = 51
format = 1
tile_data = PoolIntArray( 65535, 14, 0, 0, 13, 0, 1, 14, 0, 2, 15, 0, 3, 13, 0, 4, 14, 0, 5, 15, 0, 6, 13, 0, 7, 14, 0, 8, 15, 0, 9, 13, 0, 10, 14, 0, 11, 15, 0, 12, 13, 0, 13, 14, 0, 14, 15, 0, 15, 13, 0, 16, 14, 0, 17, 15, 0, 18, 13, 0, 19, 14, 0, 20, 14, 0, 131071, 14, 0, 65556, 14, 0, 196607, 14, 0, 131092, 14, 0, 262143, 14, 0, 196628, 14, 0, 327679, 14, 0, 262164, 14, 0, 393215, 14, 0, 327700, 14, 0, 458751, 14, 0, 393236, 14, 0, 524287, 14, 0, 458772, 14, 0, 589823, 14, 0, 524308, 14, 0, 655359, 13, 0, 589824, 0, 0, 589825, 2, 0, 589826, 3, 0, 589828, 0, 0, 589829, 2, 0, 589830, 3, 0, 589831, 4, 0, 589832, 0, 0, 589833, 2, 0, 589834, 3, 0, 589835, 4, 0, 589836, 0, 0, 589837, 2, 0, 589838, 3, 0, 589839, 4, 0, 589841, 2, 0, 589842, 3, 0, 589843, 4, 0, 589844, 13, 0, 655360, 12, 0, 655361, 12, 0, 655362, 10, 0, 655364, 12, 0, 655365, 7, 0, 655366, 12, 0, 655367, 12, 0, 655368, 12, 0, 655369, 9, 0, 655370, 12, 0, 655371, 8, 0, 655372, 12, 0, 655373, 10, 0, 655374, 12, 0, 655375, 11, 0, 655377, 12, 0, 655378, 10, 0, 655379, 8, 0 )

[node name="TileMap One way" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 5
collision_mask = 33
format = 1
tile_data = PoolIntArray( 65535, 14, 0, 0, 13, 0, 1, 14, 0, 2, 15, 0, 3, 13, 0, 4, 14, 0, 5, 15, 0, 6, 13, 0, 7, 14, 0, 8, 15, 0, 9, 13, 0, 10, 14, 0, 11, 15, 0, 12, 13, 0, 13, 14, 0, 14, 15, 0, 15, 13, 0, 16, 14, 0, 17, 15, 0, 18, 13, 0, 19, 14, 0, 20, 14, 0, 131071, 14, 0, 65556, 14, 0, 196607, 14, 0, 131092, 14, 0, 262143, 14, 0, 196628, 14, 0, 327679, 14, 0, 262145, 2, 0, 262158, 0, 0, 262164, 14, 0, 393215, 14, 0, 327688, 4, 0, 327700, 14, 0, 458751, 14, 0, 393236, 14, 0, 524287, 14, 0, 458755, 0, 0, 458764, 2, 0, 458772, 14, 0, 589823, 14, 0, 524308, 14, 0, 655359, 13, 0, 655360, 12, 0, 655361, 12, 0, 655362, 10, 0, 655363, 12, 0, 655364, 12, 0, 655365, 7, 0, 655366, 12, 0, 655367, 12, 0, 655368, 12, 0, 655369, 9, 0, 655370, 12, 0, 655371, 8, 0, 655372, 12, 0, 655373, 10, 0, 655374, 12, 0, 655375, 11, 0, 655376, 12, 0, 655377, 12, 0, 655378, 10, 0, 655379, 8, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -40, -3 )
z_index = 1
collision_mask = 14
script = ExtResource( 3 )
Bullet = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 56, 261 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
region_rect = Rect2( -35.4635, -21.8232, 35.4635, 21.8232 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 55, 264 )
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="return_to_normal_color" type="Timer" parent="Player"]
wait_time = 0.32

[node name="invincibility" type="Timer" parent="Player"]
wait_time = 3.0

[node name="Gun" parent="Player" instance=ExtResource( 6 )]
position = Vector2( 72, 264 )

[node name="muzzle" type="Position2D" parent="Player"]
position = Vector2( 79, 261 )

[node name="audio" type="AudioStreamPlayer2D" parent="Player"]
volume_db = -11.965

[node name="MobileControls" parent="." instance=ExtResource( 5 )]

[node name="Enemys" type="Node2D" parent="." groups=["zoms"]]

[node name="Portal" type="AnimatedSprite" parent="Enemys"]
position = Vector2( 105, 85 )
scale = Vector2( 1.2, 1.2 )
z_index = -1
frames = SubResource( 19 )
frame = 2
playing = true

[node name="Portal2" type="AnimatedSprite" parent="Enemys"]
position = Vector2( 320, 240 )
scale = Vector2( 1.2, 1.2 )
z_index = -1
frames = SubResource( 19 )
frame = 2
playing = true

[node name="Portal3" type="AnimatedSprite" parent="Enemys"]
position = Vector2( 535, 85 )
scale = Vector2( 1.2, 1.2 )
z_index = -1
frames = SubResource( 19 )
frame = 2
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Void" type="Area2D" parent="."]
position = Vector2( 83, 391 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Void"]
position = Vector2( 237.5, 29.5 )
shape = SubResource( 20 )

[node name="Hearts" type="Node2D" parent="."]

[node name="Heart" parent="Hearts" instance=ExtResource( 10 )]
position = Vector2( 32, 32 )
z_index = 1

[node name="Heart2" parent="Hearts" instance=ExtResource( 10 )]
position = Vector2( 72, 32 )
z_index = 1

[node name="Heart3" parent="Hearts" instance=ExtResource( 10 )]
position = Vector2( 112, 32 )
z_index = 1

[connection signal="timeout" from="Player/return_to_normal_color" to="Player" method="_on_return_to_normal_color_timeout"]
[connection signal="timeout" from="Player/invincibility" to="Player" method="_on_invincibility_timeout"]
[connection signal="body_entered" from="Void" to="." method="_on_Void_body_entered"]
